--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,48 @@
-spring.application.name=backCommerce
+spring.application.name = ecommerce
+server.port= ${APP_PORT:8081}
 
-# Configuracion BD y JPA
-spring.jpa.database=postgresql
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
-
-# Detalles de la conexion BD
-spring.datasource.url=jdbc:postgresql://10.169.50.64:5432/practicas
-spring.datasource.username=practicas
-spring.datasource.password=practicas
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-2.pooler.supabase.com:5432/postgres?pool_mode=session
+spring.datasource.username=postgres.uictqewtcvebxmsedkuy
+spring.datasource.password=Ecommerce_Test
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.maximum-pool-size=10
 
-# Hibernate
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
+
+
+spring.datasource.hikari.minimum-idle=${DB_POOL_MIN_CONNECTIONS:2}
+spring.datasource.hikari.maximum-pool-size=${DB_POOL_MAX_CONNECTIONS:10}
+
+spring.datasource.tomcat.testWhileIdle = true
+spring.datasource.tomcat.validationQuery = SELECT 1
+spring.datasource.tomcat.test-on-borrow = true
+
+
+# Hibernate properties
+hibernate.jdbc.batch_size=50
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+
+spring.jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-# Configuracion del servidor
-server.port=8000
+#LOGS FRAMEWORK
+logging.level.org.springframework.web=${LOG_LEVEL_WEB:INFO}
+logging.level.org.hibernate=${LOG_LEVEL_HIBERNATE:INFO}
+logging.level.ar.edu.sis=${LOG_LEVEL_SIS:INFO}
 
-# Swagger
-# http://localhost:8000/swagger-ui/index.html
+#LOGS SERVICE
+logging.level.root=${LOG_LEVEL_ROOT:INFO}
+logging.level.com.zaxxer.hikari=${LOG_LEVEL_HIKARI:INFO}
 
-# Swagger OpenAPI settings
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
-# PayPal integration
-paypal.client-id=AR4k7F-4R6Ro2ltfZRs9c2Sa3dqaevFOqSaVYQPrX23_zQI3z7ugiV5nht7ReGn0R8BkO4J701ErlF5l
-paypal.client-secret=EJjVWT_YM3Er81ZAKlq4N06539jll11uFfs46PoSohC48ZOQxWj8IO514dRj-HOgT9eYaMZI0er7wx0S
+paypal.client-id=TU_CLIENT_ID_AQUI
+paypal.client-secret=TU_CLIENT_SECRET_AQUI
 paypal.base-url=https://api-m.sandbox.paypal.com
 paypal.return-url=http://localhost:8000/paypal/success
 paypal.cancel-url=http://localhost:8000/paypal/cancel
-
-
-# Configuracion de PayPal
-spring.config.import=application-local.properties
 
